internal/xds/translator/testdata/out/xds-ir-sublinear/ratelimit-disable-headers.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            example:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: example
                  name: second-route
                  route:
                    cluster: second-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: second-route
                          descriptorValue: second-route
                      - requestHeaders:
                          descriptorKey: rule-0-match-0
                          headerName: x-user-id
                    upgradeConfigs:
                    - upgradeType: websocket
            foo/bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: foo/bar
                  name: first-route
                  route:
                    cluster: first-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: first-route
                          descriptorValue: first-route
                      - headerValueMatch:
                          descriptorKey: rule-0-match-0
                          descriptorValue: rule-0-match-0
                          expectMatch: true
                          headers:
                          - name: x-user-id
                            stringMatch:
                              exact: one
                    upgradeConfigs:
                    - upgradeType: websocket
            test:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: test
                  name: third-route
                  route:
                    cluster: third-route-dest
                    rateLimits:
                    - actions:
                      - genericKey:
                          descriptorKey: third-route
                          descriptorValue: third-route
                      - genericKey:
                          descriptorKey: rule-0-match--1
                          descriptorValue: rule-0-match--1
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
    name: first-listener/*
